# voran-cli

./: Cargo.toml
src/: main.rs
voran/: Cargo.toml
voran/src/: constants.txt  lib.rs  vowels.txt
