[package]
name = "voran-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voran"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voran = { path = "voran" }
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
